# autonomous-self-correcting-data-validation

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.md  Dockerfile  QUICKSTART.md  README.md  SETUP.md  SUMMARY.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py  setup.py  start.ps1  start.sh  test_env1.py  verify.py
.github/workflows/: deploy-huggingface.yml  deploy-render.yml
backend/: __init__.py  agent_config.py  agent_registry.py  app.py  database.py  requirements.txt  tools.py  validation.py
database/: validation.db
frontend/: streamlit_app.py
frontend-react/: index.html  package-lock.json  package.json  vite.config.js
frontend-react/src/: App.jsx  styles.css
knowledge/: rules.txt
src/autonomous_self_correcting_data_validation_system/: __init__.py  crew.py  database.py  main.py  rag.py  validation.py
src/autonomous_self_correcting_data_validation_system/config/: agents.yaml  tasks.yaml
tests/: test_backend.py  test_validation.py
