[project]
name = "autonomous_self_correcting_data_validation_system"
version = "0.1.0"
description = "autonomous_self_correcting_data_validation_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.15.0",
]

[project.scripts]
autonomous_self_correcting_data_validation_system = "autonomous_self_correcting_data_validation_system.main:run"
run_crew = "autonomous_self_correcting_data_validation_system.main:run"
train = "autonomous_self_correcting_data_validation_system.main:train"
replay = "autonomous_self_correcting_data_validation_system.main:replay"
test = "autonomous_self_correcting_data_validation_system.main:test"
run_with_trigger = "autonomous_self_correcting_data_validation_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
